--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1"
+  },
+  "dependencies": {
+    "@mtproto/core": "5.3.0",
+    "dotenv": "^8.2.0"
   }
 }
