--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "eslint-plugin-import": "^2.22.1"
   },
   "dependencies": {
-    "@mtproto/core": "5.3.0",
+    "@mtproto/core": "^6.2.0",
     "dotenv": "^8.2.0",
+    "path": "^0.12.7",
     "prompt-sync": "^4.2.0"
   }
 }
